--- a/Logistic_Regression.ipynb
+++ b/Logistic_Regression.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "dde2db78",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d59865d9",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "26b51660",
    "metadata": {},
    "outputs": [
@@ -563,7 +563,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.448029</td>\n",
+       "      <td>0.396833</td>\n",
        "      <td>0.143462</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -587,7 +587,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.405018</td>\n",
+       "      <td>0.359135</td>\n",
        "      <td>0.129995</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -611,7 +611,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.415041</td>\n",
+       "      <td>0.367921</td>\n",
        "      <td>0.014110</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -635,7 +635,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.390681</td>\n",
+       "      <td>0.346569</td>\n",
        "      <td>0.025374</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -659,7 +659,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.419355</td>\n",
+       "      <td>0.371701</td>\n",
        "      <td>0.054164</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -688,11 +688,11 @@
       ],
       "text/plain": [
        "        Age      Fare  Pclass_1  Pclass_2  Pclass_3  Sex_female  Sex_male  \\\n",
-       "0  0.448029  0.143462       0.0       1.0       0.0         0.0       1.0   \n",
-       "1  0.405018  0.129995       1.0       0.0       0.0         0.0       1.0   \n",
-       "2  0.415041  0.014110       0.0       0.0       1.0         0.0       1.0   \n",
-       "3  0.390681  0.025374       0.0       1.0       0.0         1.0       0.0   \n",
-       "4  0.419355  0.054164       1.0       0.0       0.0         0.0       1.0   \n",
+       "0  0.396833  0.143462       0.0       1.0       0.0         0.0       1.0   \n",
+       "1  0.359135  0.129995       1.0       0.0       0.0         0.0       1.0   \n",
+       "2  0.367921  0.014110       0.0       0.0       1.0         0.0       1.0   \n",
+       "3  0.346569  0.025374       0.0       1.0       0.0         1.0       0.0   \n",
+       "4  0.371701  0.054164       1.0       0.0       0.0         0.0       1.0   \n",
        "\n",
        "   SibSp_0  SibSp_1  SibSp_2  ...  Parch_0  Parch_1  Parch_2  Parch_3  \\\n",
        "0      0.0      0.0      1.0  ...      1.0      0.0      0.0      0.0   \n",
@@ -711,20 +711,20 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_x_scaled = scaler.fit_transform(test_x)\n",
+    "test_x_scaled = scaler.transform(test_x)\n",
     "test_x = pd.DataFrame(test_x_scaled, columns = cols)\n",
     "test_x.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "8b659819",
    "metadata": {},
    "outputs": [],
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "327dae43",
    "metadata": {},
    "outputs": [
@@ -745,7 +745,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "36556c22",
    "metadata": {},
    "outputs": [
@@ -798,7 +798,7 @@
        "       1, 0, 0, 0, 1, 1, 1, 1], dtype=int64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "45a2ccf1",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
        "0.7480314960629921"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,27 +832,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "68d9fdcb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0,\n",
-       "       0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0,\n",
+       "array([0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 0, 1, 0, 0,\n",
+       "       0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1,\n",
        "       0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0,\n",
        "       0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0,\n",
        "       1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0,\n",
-       "       0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 1,\n",
-       "       0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1,\n",
+       "       0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0,\n",
        "       0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1,\n",
        "       0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0,\n",
        "       0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1, 1, 1,\n",
        "       0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,17 +864,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "86f8b180",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7567567567567568"
+       "0.7763157894736841"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "9995ea32",
    "metadata": {},
    "outputs": [
@@ -910,7 +910,7 @@
        "       [0.05239269, 0.94760731]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "2090d4cb",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1065,7 @@
        "       0.7605869 , 0.64550387, 0.94760731])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "62965b9f",
    "metadata": {},
    "outputs": [],
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "0c36071a",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1101,7 @@
        "0.7480314960629921"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,18 +1121,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "444f823a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[131,  23],\n",
-       "       [ 13,  56]], dtype=int64)"
+       "array([[130,  20],\n",
+       "       [ 14,  59]], dtype=int64)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "45ab5215",
    "metadata": {},
    "outputs": [
@@ -1155,12 +1155,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.91      0.85      0.88       154\n",
-      "           1       0.71      0.81      0.76        69\n",
+      "           0       0.90      0.87      0.88       150\n",
+      "           1       0.75      0.81      0.78        73\n",
       "\n",
-      "    accuracy                           0.84       223\n",
-      "   macro avg       0.81      0.83      0.82       223\n",
-      "weighted avg       0.85      0.84      0.84       223\n",
+      "    accuracy                           0.85       223\n",
+      "   macro avg       0.82      0.84      0.83       223\n",
+      "weighted avg       0.85      0.85      0.85       223\n",
       "\n"
      ]
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "f9b37122",
    "metadata": {},
    "outputs": [
@@ -1186,7 +1186,7 @@
        "        -0.35148743,  0.18289156,  0.11924875, -0.3023024 ]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "f25b93da",
    "metadata": {},
    "outputs": [
@@ -1207,7 +1207,7 @@
        "Text(0.5, 1.0, 'Coefficient plot')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "id": "1991e7f9",
    "metadata": {},
    "outputs": [],
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "id": "5320873a",
    "metadata": {},
    "outputs": [
@@ -1317,7 +1317,7 @@
        "4  Pclass_3       1.045779"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "id": "0f584e17",
    "metadata": {},
    "outputs": [],
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "id": "57fe4bf1",
    "metadata": {},
    "outputs": [],
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "id": "be8295db",
    "metadata": {},
    "outputs": [
@@ -1661,7 +1661,7 @@
        "[891 rows x 17 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "id": "2e266bca",
    "metadata": {},
    "outputs": [],
@@ -1682,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "id": "9f2c846d",
    "metadata": {},
    "outputs": [
@@ -1706,7 +1706,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1719,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "id": "f9a656d5",
    "metadata": {},
    "outputs": [
@@ -1739,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 31,
    "id": "5d3ce52d",
    "metadata": {},
    "outputs": [
@@ -1749,7 +1749,7 @@
        "Text(0.5, 1.0, 'Coefficient plot')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
